Fix overscroll for tables
Fixes an overflow issue when viewing tables
that overflow. This is a problem in NNW, and can be avoided
entirely using 'overflow-x: auto' if horizontal scrolling is disabled.

--- a/article_forge/style/stylesheet.scss
+++ b/article_forge/style/stylesheet.scss
@@ -318,6 +318,7 @@ ul:has(img) {
 
 .table__wrapper {
   width: 100%;
+  overflow-x: var(--table-overflow-x, visible);
 
   table {
     table-layout: fixed;
